<resources>
    <string name="app_name">AppStreaming</string>
    <string name="explorar_prueba_gratuita">explorar prueba gratuita</string>
    <string name="acceder">ACCEDER</string>
    <string name="todo_tu_anime_favorito_todo_en_un_solo_lugar">Todo tu anime favorito. Todo en un solo lugar.</string>
    <string name="o_Crear_cuenta">o  Crear Cuenta</string>
    <string name="email_o_nombre_de_usuario">Email o nombre de usuario</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="terminos_politicas">Al usar tu cuenta accedes a nuestros Términos y Política de Privacidad y confirmas que tienes 16 años o más.</string>
    <string name="terminos_politicas2">Usando Crunchyroll accedes a nuestros Términos y Política de Privacidad y confirmas que tienes 16 años o más.</string>
    <string name="accederT">Acceder</string>
    <string name="olvidaste_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="pipe">|</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="check">Quiero estar al día sobre Crunchyroll, ofertas y noticias.</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="restablecer">Se enviará un enlace para restablecer la contraseña a tu email si la cuenta existe</string>
    <string name="restablecer_contrase_a">Restablecer contraseña</string>
    <string name="enviar_enlace_para_el_reinicio">enviar enlace para el reinicio</string>
    <string name="crunchyroll_premium">Crunchyroll Premium</string>
    <string name="suscr_bete_con_una_prueba_gratuita">suscríbete con una prueba gratuita</string>
    <string name="prueba_gratuita_de_14_d_as">Prueba gratuita de 14 días</string>
    <string name="mes">/ mes</string>
    <string name="_6_49">6,49 €</string>
    <string name="mega_fan">MEGA FAN</string>
    <string name="mejor_oferta">MEJOR OFERTA</string>
    <string name="nuevos_episodios_una_hora_despu_s_de_jap_n">Nuevos episodios una hora después de Japón</string>
    <string name="sin_anuncios">Sin anuncios</string>
    <string name="acceso_ilimitado_al_cat_logo_de_crunchyroll">Acceso ilimitado al catálogo de Crunchyroll</string>
    <string name="episodios_y_peliculas_para_verlos_sin_conexi_n">Episodios y peliculas para verlos sin conexión</string>
    <string name="_16_de_descuento_en_plan_mensual_cargo_anual">16% de descuento en Plan Mensual (cargo anual)</string>
    <string name="en_hasta_4_dispositivos_a_la_vez">En hasta 4 dispositivos a la vez</string>
    <string name="vinland_desc">Cuando Thors, un gran guerrero vikingo muere asesinado en batalla a manos de Askeladd, un mercenario, su hijo, Thorfinn, jura vengarse. Para ello tendrá que demostrar ...</string>
    <string name="ver_ahora">VER AHORA</string>
    <string name="nuestras_recomendaciones">NUESTRAS RECOMENDACIONES</string>
    <string name="inicio">Inicio</string>
    <string name="mis_listas">Mis listas</string>
    <string name="explorar">Explorar</string>
    <string name="simulcast">Simulcast</string>
    <string name="cuenta">Cuenta</string>
</resources>