<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".CrearCuenta">

    <ImageView
        android:id="@+id/imageView"
        style="@style/logoSize"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316"
        app:srcCompat="@drawable/ic_toolbar_logo"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextViewWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/crear_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <ImageView
        android:id="@+id/cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/ic_cross"
        tools:ignore="ContentDescription" />


    <Button
        android:id="@+id/button"
        style="@style/buttonAcceder"
        android:fontFamily="@font/lato_bold"
        android:text="@string/crear_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738"
        tools:ignore="MissingConstraints,TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/Acceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/accederT"
        android:textColor="#F37521"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/ya_tienes_una_cuenta"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/check"
        android:textColor="#FAFAFA"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="341dp"
        android:layout_height="59dp"
        android:backgroundTint="#f37521"
        android:textColorHint="#FAFAFA"
        app:boxBackgroundColor="#141519"
        app:boxStrokeColor="#b34803"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:hintTextColor="#FAFAFA"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fullbutton"
            android:backgroundTint="#141519"
            android:ems="10"
            android:focusable="auto"
            android:fontFamily="@font/lato"
            android:hint="@string/contrase_a"
            android:textColor="#FAFAFA"
            android:textCursorDrawable="@drawable/text_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.593"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            tools:ignore="Autofill,SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck,TextFields" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/terminos"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/terminos_politicas2"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="341dp"
        android:layout_height="59dp"
        android:backgroundTint="#f37521"
        android:textColorHint="#FAFAFA"

        app:boxBackgroundColor="#141519"
        app:boxStrokeColor="#b34803"
        app:hintTextColor="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fullbutton"
            android:backgroundTint="#141519"
            android:ems="10"
            android:focusable="auto"
            android:fontFamily="@font/lato"
            android:hint="@string/email"
            android:textColor="#FAFAFA"
            android:textCursorDrawable="@drawable/text_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.465"
            tools:ignore="Autofill,SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck,TextFields" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>