<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".Restablecer">


    <TextView
        android:id="@+id/textView"
        style="@style/TextViewWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/restablecer_contrase_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="2dp"
        android:layout_marginEnd="1dp"
        android:background="#141519"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/enviar"
        style="@style/buttonAcceder"
        android:fontFamily="@font/lato_bold"
        android:text="@string/enviar_enlace_para_el_reinicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298"
        tools:ignore="MissingConstraints,TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,VisualLintButtonSize,TextSizeCheck" />

    <TextView
        android:id="@+id/terminos"
        android:layout_width="373dp"
        android:layout_height="51dp"
        android:fontFamily="@font/lato"
        android:text="@string/restablecer"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="373dp"
        android:layout_height="60dp"
        android:backgroundTint="#f37521"

        android:textColorHint="#FAFAFA"
        app:boxBackgroundColor="#141519"
        app:boxStrokeColor="#b34803"
        app:hintTextColor="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        app:startIconTint="#F37521"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fullbutton"
            android:backgroundTint="#141519"
            android:ems="10"
            android:focusable="auto"
            android:fontFamily="@font/lato"
            android:hint="@string/email"
            android:textColor="#FAFAFA"
            android:textCursorDrawable="@drawable/text_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.465"
            tools:ignore="Autofill,SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck,TextFields" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>